[WIFI-7579] Add API to update default auto-upgrade settings (#176)
